--- a/content/post/2022-02-21-data-types/index.Rmd
+++ b/content/post/2022-02-21-data-types/index.Rmd
@@ -14,7 +14,7 @@ library(tidyverse)
 ```
 
 # Get data
-```{r}
+```{r message=FALSE}
 cat_lovers <- read_csv('https://raw.githubusercontent.com/thayerm/tidyverse/main/cat-lovers.csv')
 ```
 
@@ -60,7 +60,7 @@ c("Hello", "World!")
 
 c(c("hi", "hello"), c("bye", "jello"))
 ```
-## Converting Between Data Types
+## Converting Between Data Types {.tabset}
 # With Intention
 ```{r}
 x <- c(TRUE, FALSE)
@@ -86,6 +86,14 @@ c(2L, "two") # all character values
  - Explicit coercion is when you call a function like as.logical(), as.numeric(), as.integer(), as.double(), or as.character()
 
  - Implicit coercion happens when you use a vector in a specific context that expects a certain type of vector
+
+# Explicit Coercion
+```{r}
+x <- 1:3
+typeof(x)
+typeof(as.character(x)) # explicit
+```
+
 
 ## Special Values
  - NA: Not available
