--- a/content/post/2022-03-26-regression-models/index.Rmd
+++ b/content/post/2022-03-26-regression-models/index.Rmd
@@ -11,14 +11,13 @@ tags: []
 #Call Libraries
 ```{r}
 library(tidyverse)
-library(readxl)
 library(ISLR)
 library(boot)
 ```
 
 #Get Data and transform as necessary (make Wholesaler a factor)
 ```{r}
-df <- read_excel("data/Professor_Proposes_Data.xlsx")
+df <- read_csv("https://raw.githubusercontent.com/thayerm/mkthayer/main/content/post/2022-03-26-regression-models/data/Professor_Proposes_Data.csv")
 df$Wholesaler <- as.factor(df$Wholesaler)
 ```
 
@@ -43,30 +42,8 @@ df %>%
   geom_histogram()
 summary(Price) 
 ```
-Both Price And Carats have a bimodal distributions that can be explained by the Wholesaler
-```{r}
-df %>%
-  ggplot(aes(x=Carat,y=Price, color=Wholesaler)) +
-  geom_point()
-```
-```{r}
-df1 <- df %>%
-  filter(Wholesaler == 3)
+Both Price And Carats have a bimodal distributions with a low and high price cluster and a small and large carat cluster
 
-max(df1$Carat)
-#The largest Carat used by the the third Wholesaler is just 0.3, since the professor wants a 0.9 Carat diamond, its better to focus on data from the 1st and 2nd wholesaler wehere he will have to buy from
-```
-```{r}
-df23 <- df %>%
-  filter(Wholesaler == 2 | Wholesaler == 1)
-# Data set only looking at the 1st and second wholesaler
-# dimensions on new df
-dim(df23)
-
-df23 %>%
-  ggplot(aes(x=Carat,y=Price, color=Wholesaler)) +
-  geom_point()
-```
 ```{r}
 attach(df)
 #attach data frame
@@ -132,32 +109,96 @@ table(df$Polish)
 ```{r}
 table(Symmetry)
 ```
-
-
-
-### Bootstrapping Model
-
-### Using the coefficients given from the model you get the equation: Price = -288.74062 + 2686.4570(0.9) + 15.51392(1) - 465.49086(1) + 618.77332(1) + 489.84803(1) + 72.08555(1) - 15.23534(1) = 2844.49
-
+## Bivariate Analysis
 
 ```{r}
-## Boot function
-boot.fn <- function(data, index) {
-  return(coef(lm(Price~Carat, data=data, subset=index)))
-}
+df %>%
+  ggplot(aes(x=Carat,y=Price, color=Wholesaler)) +
+  geom_point()
 ```
 ```{r}
-set.seed(1)
-boot.fn(df23, sample(240,240,replace=T))
+df1 <- df %>%
+  filter(Wholesaler == 3)
+
+max(df1$Carat)
+#The largest Carat used by the the third Wholesaler is just 0.3, since the professor wants a 0.9 Carat diamond, its better to focus on data from the 1st and 2nd wholesaler wehere he will have to buy from
+```
+```{r}
+df23 <- df %>%
+  filter(Wholesaler == 2 | Wholesaler == 1)
+# Data set only looking at the 1st and second wholesaler
+# dimensions on new df
+dim(df23)
+
+df23 %>%
+  ggplot(aes(x=Carat,y=Price, color=Wholesaler)) +
+  geom_point()
 ```
 
+We can model both the data sets discovered in the bivariate analysis
+
+## Regression
 ```{r}
-model <- glm(Price ~ Carat + Colour + Symmetry + Clarity + Cut + Polish + Certification)
+Carat_Regression <- lm(Price ~ Carat, data = df23)
+coef(Carat_Regression)
+summary(Carat_Regression)
+aov(Carat_Regression)
+
+```
+The R2 of just 10.72% suggest a very weak correlation, meaning carat alone can't explain the price. However, the low P-value suggests Carat is a significant value
+```{r}
+Clarity_Regression <- lm(Price ~ Clarity, data = df)
+coef(Clarity_Regression)
+summary(Clarity_Regression)
+aov(Clarity_Regression)
+```
+The R2 is just 10.24% which shows low levels of correlation. However, the low p-score and high F-statistic suggests clarity is very significant in predicting price
+```{r}
+Certification_Regression <- lm(Price ~ Certification, data = df23)
+coef(Certification_Regression)
+summary(Certification_Regression)
+aov(Certification_Regression)
+```
+Certification has a R2 of just 8.15% as well as a comparitively low F-statistic. The p-scores are still < .05 suggesting it is still significant
+```{r}
+Cut_Regression <- lm(Price ~ Cut, data = df23)
+coef(Cut_Regression)
+summary(Cut_Regression)
+aov(Cut_Regression)
+```
+Cut has a R2 of 14.4%, which is one of the strongest correlations among the variables. The p scores are also in significant range
+```{r}
+Polish_Regression <- lm(Price ~ Polish, data = df23)
+coef(Polish_Regression)
+summary(Polish_Regression)
+aov(Polish_Regression)
+```
+Polish has a R2 of 15.05%, which is the strongest correlation among the variables. The F-statistic is 8.291 which is on the lower end but the p-scores still fall in significant range.
+```{r}
+Symmetry_Regression <- lm(Price ~ Symmetry, data = df23)
+coef(Symmetry_Regression)
+summary(Symmetry_Regression)
+aov(Symmetry_Regression)
+```
+The R2 is 14.09%. The p-scores are all significant or very significant
+```{r}
+Colour_Regression <- lm(Price ~ Colour, data = df23)
+coef(Colour_Regression)
+summary(Colour_Regression)
+aov(Colour_Regression)
+```
+The colors with significant p-values are the yellow colors, whereas the colorless ones don't have a p < 0.05 in general. The R2 is 9.9% showing very little correlation and the F-statistic is also comparitively much lower than the rest.
+
+```{r}
+attach(df23)
+```
+
+### Multiple Linear Regression Model
+
+```{r}
+model <- glm(Price ~ Carat + Colour + Symmetry + Clarity + Cut + Polish + Certification, data = df23)
 summary(model)
 ```
-```{r}
-model <- glm(Price ~ Carat + Colour + Clarity )
-summary(model)
-```
+### Plugging in the values to the model(526.71 + 2224.79(.9) - 505.43 + 99.70 + 603.27 +36.13 + 90.59 + 6.29) you get the price for the diamond is $2859.29 with a 95% confidence interval of $2042.35 to $3676.23. Overall this is slightly lower than his expected price of $3100, however this doesn't account for the entire ring, just the diamond. The largest determinants of price was the Carat size and Clarity of the diamond.
 
 
